kubernetes/apps/flux-system/flux-instance/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/is-public: "true"
spec:
  hostnames: ["flux-webhook.${SECRET_DOMAIN}"]
  parentRefs:
    - name: external-gateway
      namespace: network
      sectionName: https-56kbps
  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /hook/
